--- a/static/css/index.css
+++ b/static/css/index.css
@@ -20,7 +20,7 @@ body {
 		#bd{
 			position: absolute;
 		    text-align: right;
-			left: 32%;
+			left: 22%;
 		}
         .hd span{
             font-size:50px;
@@ -32,7 +32,7 @@ body {
 		#pp{
 			color: #776e65;
 		}
-		#p2{
+		.p2{
 			display: inline-block;
 			text-align: left;
 			color: darkorange;
